chore: add meta description for Laika

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/laika-labs.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Laika</title>
+    <meta name="description" content="Laika is a request builder for web3. It allows you to interact with smart contracts without a single line of code." />
   </head>
   <body>
     <div id="root"></div>
